--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -13,7 +13,7 @@
     
   .field
     = f.label :password
-    = f.text_field :password 
+    = f.password_field :password 
   
   .field
     = f.submit 'Sign Up'
