Authorization is working now

--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -26,6 +26,7 @@ form
 input[type="text"], input[type="password"]
   padding: $grid/4
   border: 1px solid #aaa
+  width: 20 * $grid
   @include rounded
   &:focus
     background: #fffbe3
