--- a/app/assets/stylesheets/_layout.css.sass
+++ b/app/assets/stylesheets/_layout.css.sass
@@ -8,15 +8,15 @@ body
   width: $content_width
   background: #fff
   overflow: hidden
-  padding: $grid 0 0 0
-  
-.section
-  padding: 0 $grid
+  padding: $grid $grid 0 $grid
   
 .row, .section
   float: left
   clear: both
   margin-bottom: $grid
+  
+.row
+  margin-left: -$grid
   
 .columns
   float: left	
