--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,11 +1,10 @@
-= form_for @user, :html => {:class => 'stacked'} do |f| 
-  - if @user.errors.any? 
-    #error_explanation
-      %h2 #{pluralize(@user.errors.count, "error")} prohibited this user from being saved:
-
-      %ul
-        - @user.errors.full_messages.each do |msg| 
-          %li= msg 
+= form_for resource, :html => {:class => 'stacked'} do |f| 
+   
+  - unless resource.new_record?
+    .field
+      = f.label :name
+      = f.text_field :name
+     
    
   .field
     = f.label :email
