Saving for a push to heroku

--- a/app/assets/stylesheets/_alerts.css.sass
+++ b/app/assets/stylesheets/_alerts.css.sass
@@ -6,7 +6,7 @@
     border-color: #FFDFCF
   &.block
     padding: $grid - 1 2 * $ygrid - 1
-    margin-bottom: $ygrid
+    margin: 0 -2 * $grid $ygrid -2 * $grid
     @include rounded
   p
     margin-bottom: 0
