--- a/app/assets/stylesheets/_layout.css.sass
+++ b/app/assets/stylesheets/_layout.css.sass
@@ -37,7 +37,7 @@ body
   width: $content_width
   background: #fff
   overflow: hidden
-  padding: $grid 0 0 0
+  padding: $grid 2 * $grid
  
  
 .spacer, .spacer1, .spacer2, .spacer3
