--- a/app/views/dashboards/show.html.haml
+++ b/app/views/dashboards/show.html.haml
@@ -3,6 +3,8 @@
 %h3 Your Leagues
 - if current_user.leagues.empty?
   %p
-    %em Looks like you aren't in any leagues yet. You should #{link_to 'join one', leagues_path}.
+    %em You aren't in any leagues yet.
+  %p
+    %em You should #{link_to 'find one to join', leagues_path}.
 - else
   = render :partial => 'leagues/league', :collection => current_user.leagues
