--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,7 +1,7 @@
 .row
   .span4
     %h2 Awesome!
-    %p I'm super flattered that you want to join.
+    %p I'm super excited that you want to join.
     
     %p Just make your account and you'll be ready to start tracking foosball games like there's no tomorrow.
   .span4
