--- a/app/views/shared/_error_messages.html.haml
+++ b/app/views/shared/_error_messages.html.haml
@@ -2,6 +2,7 @@
   .alert.block.error
     %h3
       Oh no!
-    
-    - target.errors.full_messages.each do |msg|
-      %p= msg
+      
+    %ul
+      - target.errors.full_messages.each do |msg|
+        %li= msg
