A bunch of changes..

--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -7,7 +7,7 @@ form
   .field
     @include clearfix
     padding: $grid 2 * $grid
-    label, input
+    label, input, select
       float: left
       clear: both
 
