--- a/app/views/games/_game.html.haml
+++ b/app/views/games/_game.html.haml
@@ -2,7 +2,12 @@
 .row
   - game.scores.each do |score|
     .span1
-      %h3= score.goals
-    - score.players.each do |player|
-      .span3
-        %p= player.user.name
+      - if score.is_winner?
+        %h3= score.goals
+      - else
+        %p= score.goals
+    .span3
+      - if score.is_winner?
+        %strong= score.players.collect{|p| p.user.name}.join(' & ')
+      - else
+        = score.players.collect{|p| p.user.name}.join(' & ')
