--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,8 +1,8 @@
 .row
-  .span4
+  .span4.offset2
     %h2 Awesome!
     %p I'm super excited that you want to join.
     
     %p Just make your account and you'll be ready to start tracking foosball games like there's no tomorrow.
-  .span4
+  .span6
     = render 'form'
