--- a/app/assets/stylesheets/_layout.css.sass
+++ b/app/assets/stylesheets/_layout.css.sass
@@ -1,4 +1,4 @@
-$columns_count: 8
+$columns_count: 12
 $columns_width: 3 * $grid
 $columns_gutter_width: 2 * $grid
 $content_width: $columns_width * $columns_count + $columns_gutter_width * ($columns_count - 1) 
@@ -68,6 +68,11 @@ body
 @for $offset from 1 through ($columns_count - 1)
   .offset#{$offset}
     margin-left: $offset * ($columns_width + $columns_gutter_width)
+    
+.right
+  text-align: right
+  input, .btn
+    float: right
     
 .score
   .goals
