--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,16 +1,17 @@
-
-.spacer2
-  
-%h1.wordmark
-  Foosball Tracker.
-    
-.spacer
-  
-%p Just a nifty little site for keeping track of who's better than who at foosball.
-  
-.spacer2
-  
-.section
-  = link_to 'Sounds cool, I want to join!', sign_up_path, :class => 'btn submit'
-  = link_to 'I already have an account', login_path, :class => 'btn'
-  
+.row
+  .span8.offset2
+    .spacer2
+      
+    %h1.wordmark
+      Foosball Tracker.
+        
+    .spacer
+      
+    %p Just a nifty little site for keeping track of who's better than who at foosball.
+      
+    .spacer2
+      
+    .section
+      = link_to 'Sounds cool, I want to join!', sign_up_path, :class => 'btn submit'
+      = link_to 'I already have an account', login_path, :class => 'btn'
+      
