--- a/app/assets/stylesheets/_typo.css.sass
+++ b/app/assets/stylesheets/_typo.css.sass
@@ -7,9 +7,12 @@ h1, h2, h3
     family: 'PT Sans Caption', sans-serif
     weight: 700
   margin-bottom: $ygrid * 2
+  clear: both
   small
     color: #666
     font-size: 70%
+  input, .btn
+    float: right
   
 h1
   font-size: 48px
