--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -7,6 +7,9 @@
 $grid: 10px
 $ygrid: 6px
 
+/* Colors */
+$error_color: #E64963
+
 /* Mixins */
 @mixin clearfix
   overflow: hidden
@@ -36,3 +39,5 @@ $ygrid: 6px
 @import forms 
 
 @import alerts
+
+@import game
