--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,12 +1,14 @@
 
 %h1 Game #{resource.id}
 
+%p
+  %strong League:
+  = link_to resource.league.name, resource.league
+  
 .row
-  - resource.scores.each do |score|
-    .columns.span8
-      %h2= score.goals
-      - score.players.each do |player|
+  - resource.teams.each do |team|
+    .span6
+      %h2= team.goals
+      - team.players.each do |player|
         %p #{player.position}: #{player.user.name}
-.section
-  = link_to 'Edit', edit_resource_path
-  = link_to 'Back to List', collection_path
+        
