--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,12 +2,19 @@
 - if resource == current_user
   .section
     %p= link_to 'Edit profile', edit_resource_path
-%h2 Your Leagues
+
+%h2 Leagues
 - if resource.leagues.empty?
   %p
     %em #{resource.name} isn't in any leagues yet
 - else
-  .row
-    - resource.leagues.each do |league|
-      .columns.span4= render :partial => 'leagues/league', :object => league
-%p= link_to 'View leagues', leagues_path
+  %p=raw resource.leagues.collect{|league| link_to league.name, league}.join(', ')
+      
+.row
+  .span6
+    %h2= pluralize resource.wins_count, 'Win'
+    = render :partial => 'games/game', :collection => resource.wins.order('games.created_at DESC')
+  .span6
+    %h2= pluralize resource.wins_count, 'Loss'
+    = render :partial => 'games/game', :collection => resource.losses.order('games.created_at DESC')
+      
