Just a bit o' messaging copy

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,17 +1,19 @@
+
+%h3 Hey look! It's Zach's
 .row
-  .span8.offset2
-    .spacer2
-      
+  .span8
+    .spacer2  
     %h1.wordmark
       Foosball Tracker.
         
-    .spacer
-      
-    %p Just a nifty little site for keeping track of who's better than who at foosball.
-      
+
     .spacer2
       
+    %p It's a nifty little site for keeping track of who's better than who at foosball.
+  .span4
+    
     .section
       = link_to 'Sounds cool, I want to join!', sign_up_path, :class => 'btn submit'
+    .section
       = link_to 'I already have an account', login_path, :class => 'btn'
       
