--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -2,18 +2,12 @@
 %h3 Hey look! It's Zach's
 .row
   .span8
-    .spacer2  
+    .spacer1
     %h1.wordmark
       Foosball Tracker.
         
-
     .spacer2
-      
-    %p It's a nifty little site for keeping track of who's better than who at foosball.
-  .span4
-    
     .section
-      = link_to 'Sounds cool, I want to join!', sign_up_path, :class => 'btn submit'
-    .section
+      = link_to 'Sounds neat, I want to join', sign_up_path, :class => 'btn submit'
       = link_to 'I already have an account', login_path, :class => 'btn'
       
