--- a/app/assets/stylesheets/_layout.css.sass
+++ b/app/assets/stylesheets/_layout.css.sass
@@ -38,6 +38,15 @@ body
   background: #fff
   overflow: hidden
   padding: $grid 2 * $grid
+  
+.footer
+  border-top: 1px dotted #ccc
+  font-size: 80%
+  width: $content_width/2
+  color: #aaa
+  margin: $ygrid auto
+  padding-top: $grid / 2
+  text-align: center
  
  
 .spacer, .spacer1, .spacer2, .spacer3
