--- a/app/views/application/_footer.html.haml
+++ b/app/views/application/_footer.html.haml
@@ -1,2 +1,5 @@
 .footer
-  %p This site was written by Zach. Also, copyright or whatever.
+  %p
+    This site was #{['tastefully', 'handsomely', 'daintily', 'delicately', 'gracefully', 'elegantly', 'delightfully', 'harmoniously', 'beautifully', 'magnficently', 'exquisitely', 'gorgeously', 'magnificently'].sample} written by Zach.
+    %br
+    Also, copyright or whatever.
