Fixed profile edit view

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -19,5 +19,5 @@
   - else
     .section.actions
       = f.submit 'Save'
-      = link_to 'Cancel', show_resource_path, :class => 'btn'
+      = link_to 'Cancel', resource_path, :class => 'btn'
   
