Add league return action button to game view page

--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -13,5 +13,6 @@
         %p #{player.position}: #{player.user.name}
         
 .section.actions
-  = link_to 'Edit game', edit_resource_path, :class => 'btn'
+  = link_to 'Return to league', resource.league, :class => 'btn submit'
+  = link_to 'Edit game results', edit_resource_path, :class => 'btn'
         
