--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -29,6 +29,10 @@ $error_color: #E64963
     border-#{$side}-radius: $radius
     -moz-border-radius-#{$side}: $radius
     -webkit-border-#{$side}-radius: $radius
+    
+@mixin gradient($color1, $color2)
+  background-image: -moz-linear-gradient(center top, $color1, color2)
+  background: -webkit-gradient(linear, center top, center bottom, from($color1), to($color2));
 
 /* Sass partial includes */
 
