--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -32,7 +32,7 @@ $error_color: #E64963
     
 @mixin gradient($color1, $color2)
   background-image: -moz-linear-gradient(center top, $color1, color2)
-  background: -webkit-gradient(linear, center top, center bottom, from($color1), to($color2));
+  background: -webkit-gradient(linear, center top, center bottom, from($color1), to($color2))
 
 /* Sass partial includes */
 
