--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -34,6 +34,10 @@ $error_color: #E64963
   background-image: -moz-linear-gradient(center top, $color1, color2)
   background: -webkit-gradient(linear, center top, center bottom, from($color1), to($color2))
 
+/* Chrome uses Windows' horrid font smoothing by default. Adding a transparent text-shadow makes it fall back to Webkit's default (and superior) font renderer */  
+@mixin force_smoothing
+  text-shadow: rgba(0, 0, 0, .01) 0 0 1px
+
 /* Sass partial includes */
 
 @import layout
