I'm bad at mixins

--- a/app/assets/stylesheets/_typo.css.sass
+++ b/app/assets/stylesheets/_typo.css.sass
@@ -3,7 +3,7 @@ body
   color: #333
   
 h1, h2, h3
-  @force_smoothing
+  @include force_smoothing
   font:
     family: 'PT Sans Caption', sans-serif
     weight: 700
