Change wordmark text-shadow rules to use transparency. Hopefully this will make chrome use font-smoothing

--- a/app/assets/stylesheets/_typo.css.sass
+++ b/app/assets/stylesheets/_typo.css.sass
@@ -42,10 +42,10 @@ a
     family: Pacifico, cursive
     weight: bold
   color: #E67D49
-  text-shadow: #d7d7d7 1px 1px 0
+  text-shadow: rgba(0, 0, 0, 0.83984375) 1px 1px 0
   a
     color: inherit
     
 h1, h2, h3
   .wordmark
-    text-shadow: #aaa 1px 1px 0
+    text-shadow: rgba(0, 0, 0, 0.6640625) 1px 1px 0
