--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -33,7 +33,7 @@ $error_color: #E64963
 @mixin gradient($color1, $color2)
   background: mix($color1, $color2) //fallback for older browsers
   background-image: -webkit-gradient(linear, left top, left bottom, from($color1), to($color2)) // Chrome & Safari
-  background-image: -moz-linear-gradient(top, $color1, color2) // Firefox
+  background-image: -moz-linear-gradient(top, $color1, $color2) // Firefox
   background-image: linear-gradient(top, $color1 0%, $color2 100%) // W3C
 
 /* Chrome uses Windows' horrid font smoothing by default. Adding a transparent text-shadow makes it fall back to Webkit's default (and superior) font renderer */  
