--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -29,6 +29,7 @@ textarea
 input[type="submit"], .btn
   float: left
   font-size: 11.2px
+  font-weight: 700
   padding: 3 * $grid/4 $grid
   @include rounded
   border: 1px solid darken($primary_button_color, 15%)
