Fix record game cancel button path

--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -15,4 +15,4 @@
         
   .section.actions
     = f.submit 'Save Game'
-    = link_to 'Cancel', collection_path, :class => 'btn'  
+    = link_to 'Cancel', resource.league, :class => 'btn'  
