--- a/app/views/leagues/show.html.haml
+++ b/app/views/leagues/show.html.haml
@@ -26,7 +26,7 @@
           = link_to image_tag(user.gravatar_url(:size => 32)), user
           
         .span3
-          %strong #{user.name} (#{user.current_rank.to_i})
+          %strong #{user.name} (#{'%0.1f' % user.current_rank})
           %br
           %small #{pluralize user.wins_count, 'win'}, #{pluralize user.losses_count, 'loss'}
 
