--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -15,6 +15,8 @@
       , &sigma;=
       %span#skill_deviation{:data => {:default => resource.current_rating.deviation}}= '%0.2f' % resource.current_rating.deviation
       )
+    %p
+      %small Hover over points on the graph for specific game ratings
       
   .span8
     %h3 Leagues
@@ -30,7 +32,7 @@
 :coffeescript
   $ ->
     data = #{resource.players.order('players.created_at ASC').collect{|p| [p.created_at.to_i * 1000, Player.rank(p.rating), p.skill_mean]}.to_json}
-    $.plot $('#fig'), [data],
+    myFlot = $.plot $('#fig'), [data],
       series:
         lines:
           show: true
@@ -43,6 +45,9 @@
       grid:
         hoverable: true
         mouseActiveRadius: 25
+      crosshair:
+        mode: 'x'
+        color: '#aaaaaa'
                 
     $('#fig').bind 'plothover', (event, pos, item) ->
       if item
@@ -50,11 +55,17 @@
         $('#rating').text(item.datapoint[1].toFixed(2))
         $('#skill_mean').text(item.datapoint[2].toFixed(2))
         $('#skill_deviation').text(((item.datapoint[2] - item.datapoint[1]) / 3).toFixed(2))
+        myFlot.lockCrosshair
+          x: item.datapoint[0]
+          y: item.datapoint[1]
+          
       else
         $('#rating').text($('#rating').data('default').toFixed(2))
         $('#skill_mean').text($('#skill_mean').data('default').toFixed(2))
         $('#skill_deviation').text($('#skill_deviation').data('default').toFixed(2))
-      
+        myFlot.unlockCrosshair()
+          
+        
 .row
   .span8
     %h3= pluralize resource.wins_count, 'Win'
